--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=nutrisend-platform
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=Xikn$*ZMl0mX
 spring.datasource.url=jdbc:mysql://localhost:3306/nutrisend?useSSL=false&serverTimezone=UTC
 
 # Spring Data JPA Configuration
@@ -19,3 +19,7 @@ spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.sha
 # Elements take their values form maven pom.xml build-related information
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
+
+#JQT Configuration Properties
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
