--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>pluralize</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<!-- Spring Boot Starter Mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<!-- Spring Boot Starter Scheduling (para tareas programadas) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
