--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,23 @@
 # Spring Application name
 spring.application.name=nutrisend-platform
 
-# Spring DataSource Configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://localhost:3306/nutrisend?useSSL=false&serverTimezone=UTC
+# Configuración del puerto del servidor
+server.port=${PORT:8080}
 
-# Spring Data JPA Configuration
+# Configuración de la fuente de datos (DataSource)
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:nutrisend}?useSSL=false
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:12345}
+
+# Configuración de Spring Data JPA
 spring.jpa.show-sql=true
 
-# Spring Data JPA Hibernate Configuration
+# Configuración de Hibernate para JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.shared.infrastructure.persistemce.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
-# Elements take their values form maven pom.xml build-related information
+# Información de la aplicación
 documentation.application.description=@project.description@
-documentation.application.version=@project.version@
