--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.sha
 # Elements take their values form maven pom.xml build-related information
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
+
+
+# Configuración de correo electrónico
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nutrisend41@gmail.com
+spring.mail.password=NutriSend12345#bb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
