--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-# Spring Application name
-spring.application.name=nutrisend-platform
-
-# Spring DataSource Configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Xikn$*ZMl0mX
+spring.datasource.password=12345
 spring.datasource.url=jdbc:mysql://localhost:3306/nutrisend?useSSL=false&serverTimezone=UTC
 
 # Spring Data JPA Configuration
@@ -20,7 +15,6 @@ spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.sha
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
 
-
 # Configuración de correo electrónico
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -30,10 +24,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-#JQT Configuration Properties
+# JWT Configuration Properties
 authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
 authorization.jwt.expiration.days = 7
-
-
-
-
