--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=45306
 
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=AIleAdQVmXCXToaBVRIWGDNsaZjTdacV
 spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:45306/nutrisend
 
 # Spring Data JPA Configuration
@@ -22,28 +22,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# Spring Data JPA Hibernate Configuration
-
-spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.shared.infrastructure.persistemce.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
-
-# Elements take their values form maven pom.xml build-related information
-documentation.application.description=@project.description@
-documentation.application.version=@project.version@
-
-# Configuración de correo electrónico
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=nutrisend41@gmail.com
-spring.mail.password=NutriSend12345#bb
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-
-# JWT Configuration Properties
-authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
-authorization.jwt.expiration.days = 7
-
 # Enable HTTPS
 server.forward-headers-strategy=native
+
+spring.mail.host=smtp.your-email-provider.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
