--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 # Spring Application name
 spring.application.name=nutrisend-platform
 
-# Spring Application port
-server.port=45306
-
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=AIleAdQVmXCXToaBVRIWGDNsaZjTdacV
-spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:45306/nutrisend
+spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
